--- a/src/robot_model/CMakeLists.txt
+++ b/src/robot_model/CMakeLists.txt
@@ -25,7 +25,7 @@ if(BUILD_TESTING)
 endif()
 
 install(
-  DIRECTORY launch urdf
+  DIRECTORY launch urdf world
   DESTINATION share/${PROJECT_NAME}/
 )
 
