--- a/src/robot_model/package.xml
+++ b/src/robot_model/package.xml
@@ -14,6 +14,8 @@
   <depend>gazebo_ros</depend>
   <depend>gazebo_ros_control</depend>
 
+  <exec_depend>pynput</exec_depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
